🐛 Post Card Dark Mode background fix

--- a/assets/styles/darkmode.scss
+++ b/assets/styles/darkmode.scss
@@ -38,6 +38,10 @@ body.dark-mode {
     background: $primary !important;
   }
 
+  .card {
+    background: $primary;
+  }
+
   .sidebar {
     background: $primary;
 
